--- a/src/components/SecondVideo.css
+++ b/src/components/SecondVideo.css
@@ -86,4 +86,10 @@
         margin: 0.5rem;
         padding: 0.7rem;
     }
+    .video-text2{
+        font-size: 1rem;
+        margin: auto 3rem auto 1rem;
+        color: rgba(255, 251, 2, 0.829);
+    }
+
 }
