--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -12,7 +12,7 @@
     max-width: 500px;
     flex-wrap: wrap;
     padding: 0;
-    gap: 1rem;
+    gap: 1.5rem;
     margin: 0 1rem;
     flex-direction: row;
     margin-bottom: 2rem;
@@ -25,7 +25,7 @@
 }
 .one-section{
     border: 1px solid rgb(247, 222, 222);
-    border-radius: 0.7rem;
+    border-radius: 1rem;
     width: 220px;
     height: 333px;
     padding: 0;
@@ -108,6 +108,9 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    .budget{
+        top: 6%;
     }
 }
 @media only screen and (max-width: 330px){
