--- a/src/components/firstVideo.css
+++ b/src/components/firstVideo.css
@@ -25,7 +25,7 @@ font-family: 'PT Sans', sans-serif;
     position: absolute;
     font-size: 1.3rem;
     margin: auto 3rem auto 0.6rem;
-    color: antiquewhite;
+    color: rgba(255, 251, 2, 0.829);
     font-weight: bolder;
     font-weight: 600;
     left: 2%;
