--- a/src/components/userStyle.css
+++ b/src/components/userStyle.css
@@ -27,7 +27,7 @@ div p{
 
 @media only screen and (max-width: 330px){
      .user{
-         gap: 0.2;
+         gap: 2rem;
      }
      .back{
          font-size: 1.3rem;
